--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,7 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/xubing0906/works-demo.github.io
+  # example, https://github.com/hexojs/hexojs.github.io
+  branch: gh-pages
