--- a/themes/miho/_config.yml
+++ b/themes/miho/_config.yml
@@ -40,24 +40,13 @@ menu:
 #    url: //minhow.com    Url, absolute or relative path | 链接，绝对或相对路径
 #    target: true         Whether to jump out | 是否跳出
 social:
-  home:
-    title: MinHow
-    url: //minhow.com
-    target: true
   github:
     title: Github
-    url: //github.com/wongminho
+    url: https://github.com/xubing0906
     target: true
-  weibo:
-    title: Weibo
-    url: //weibo.com/WongMinHo
+  weixin:
+    title: xubingbing0906
     target: true
-  twitter:
-    title: Twitter
-    url: //twitter.com/huangminhow
-    target: true
-  #qq:
-  #weixin:
   #snapchat:
   #telegram:
   #envelope-o:
