--- a/themes/miho/_config.yml
+++ b/themes/miho/_config.yml
@@ -7,11 +7,11 @@ favicon: /favicon.ico
 # Header
 
 # Keywords of your site | 网站关键字
-keywords: MinHow,MinHow's Blog
+keywords: xubing's Works
 # Head headline | 头部标题
-header_title: MinHow's Blog
+header_title: xubing's Blog
 # Head description | 头部描述
-header_description: 一个专注 WEB 开发的技术博客
+header_description: works
 # Link to your logo | logo地址
 logo: images/logo.png
 # Link to your banner_img | 首页banner图地址
