--- a/_config.yml
+++ b/_config.yml
@@ -108,4 +108,4 @@ deploy:
   type: git
   repo: https://github.com/xubing0906/works-demo.github.io
   # example, https://github.com/hexojs/hexojs.github.io
-  branch: main
+  branch: gh-pages
