--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "echo-js": "^1.7.3",
     "hexo": "^6.3.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^4.0.0",
