--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include:
-exclude: /works-demo
+exclude:
 ignore:
 
 # Extensions
