--- a/_config.yml
+++ b/_config.yml
@@ -40,10 +40,10 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: true
+post_asset_folder: false
 marked:
-    prependRoot: false
-    postAsset: false
+    prependRoot: true
+    postAsset: true
 relative_link: false
 future: true
 highlight:
